chore: fix overflow

--- a/styles/prism.scss
+++ b/styles/prism.scss
@@ -1482,7 +1482,7 @@ body {
 }
 
 .ch-no-scroll {
-  overflow: auto;
+  overflow: auto !important;
 }
 
 .ch-editor-button {
